// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useDeleteOneRecord A. Starting from empty cache 1. Should successfully delete record and update record cache entry 1`] = `
{
  "__typename": "Person",
  "deletedAt": "2024-02-14T09:45:00Z",
  "id": "20202020-b000-4485-94de-70c2a98daef2",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 1. Should handle successfull record deletion 1`] = `
{
  "__typename": "Person",
  "attachments": [],
  "avatarFile": null,
  "avatarUrl": "https://twentyhq.github.io/placeholder-images/people/image-88.png",
  "calendarEventParticipants": [],
  "caredForPets": [],
  "city": "New Jennifer",
  "company": {},
  "companyId": "20202020-aa0b-48a9-85ba-e223975696ea",
  "createdAt": "2026-02-27T01:17:29.464Z",
  "createdBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Jony Ive",
    "source": "WEBHOOK",
    "workspaceMemberId": "20202020-77d5-4cb6-b60a-f4a835a85d61",
  },
  "deletedAt": "2024-02-14T09:45:00Z",
  "emails": {
    "__typename": "Emails",
    "additionalEmails": [],
    "primaryEmail": "jeffery.griffin@example.com",
  },
  "favorites": [],
  "id": "20202020-b000-4485-94de-70c2a98daef2",
  "intro": "",
  "jobTitle": "Embryologist, clinical",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com/in/person-442",
    "secondaryLinks": [],
  },
  "messageParticipants": [
    {},
  ],
  "name": {
    "__typename": "FullName",
    "firstName": "Jeffery",
    "lastName": "Griffin",
  },
  "noteTargets": [
    {},
  ],
  "performanceRating": null,
  "phones": {
    "__typename": "Phones",
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+49",
    "primaryPhoneCountryCode": "DE",
    "primaryPhoneNumber": "7114567890",
  },
  "pointOfContactForOpportunities": [],
  "position": 442,
  "previousCompanies": [],
  "taskTargets": [
    {},
  ],
  "timelineActivities": [
    {},
    {},
    {},
  ],
  "updatedAt": "2026-02-27T01:17:29.464Z",
  "updatedBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Jony Ive",
    "source": "WEBHOOK",
    "workspaceMemberId": "20202020-77d5-4cb6-b60a-f4a835a85d61",
  },
  "whatsapp": {
    "__typename": "Phones",
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+33",
    "primaryPhoneCountryCode": "FR",
    "primaryPhoneNumber": "",
  },
  "workPreference": [],
  "xLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 1. Should handle successfull record deletion 2`] = `
{
  "__typename": "Company",
  "accountOwner": null,
  "address": {
    "__typename": "Address",
    "addressCity": "Dublin",
    "addressCountry": "Ireland",
    "addressLat": null,
    "addressLng": null,
    "addressPostcode": null,
    "addressState": null,
    "addressStreet1": "Eutaw Street",
    "addressStreet2": null,
  },
  "createdAt": "2025-02-16T08:21:51.715Z",
  "createdBy": {
    "__typename": "Actor",
    "context": {},
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "domainName": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com",
    "secondaryLinks": [],
  },
  "employees": null,
  "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": "Linkedin",
  "noteTargets": [],
  "opportunities": [
    {},
  ],
  "people": [
    {},
    {},
  ],
  "position": 1,
  "taskTargets": [],
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 2. Should handle optimistic cache on record deletion 1`] = `
{
  "__typename": "Person",
  "attachments": [],
  "avatarFile": null,
  "avatarUrl": "https://twentyhq.github.io/placeholder-images/people/image-88.png",
  "calendarEventParticipants": [],
  "caredForPets": [],
  "city": "New Jennifer",
  "company": {},
  "companyId": "20202020-aa0b-48a9-85ba-e223975696ea",
  "createdAt": "2026-02-27T01:17:29.464Z",
  "createdBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Jony Ive",
    "source": "WEBHOOK",
    "workspaceMemberId": "20202020-77d5-4cb6-b60a-f4a835a85d61",
  },
  "deletedAt": Any<String>,
  "emails": {
    "__typename": "Emails",
    "additionalEmails": [],
    "primaryEmail": "jeffery.griffin@example.com",
  },
  "favorites": [],
  "id": "20202020-b000-4485-94de-70c2a98daef2",
  "intro": "",
  "jobTitle": "Embryologist, clinical",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com/in/person-442",
    "secondaryLinks": [],
  },
  "messageParticipants": [
    {},
  ],
  "name": {
    "__typename": "FullName",
    "firstName": "Jeffery",
    "lastName": "Griffin",
  },
  "noteTargets": [
    {},
  ],
  "performanceRating": null,
  "phones": {
    "__typename": "Phones",
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+49",
    "primaryPhoneCountryCode": "DE",
    "primaryPhoneNumber": "7114567890",
  },
  "pointOfContactForOpportunities": [],
  "position": 442,
  "previousCompanies": [],
  "taskTargets": [
    {},
  ],
  "timelineActivities": [
    {},
    {},
    {},
  ],
  "updatedAt": "2026-02-27T01:17:29.464Z",
  "updatedBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Jony Ive",
    "source": "WEBHOOK",
    "workspaceMemberId": "20202020-77d5-4cb6-b60a-f4a835a85d61",
  },
  "whatsapp": {
    "__typename": "Phones",
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+33",
    "primaryPhoneCountryCode": "FR",
    "primaryPhoneNumber": "",
  },
  "workPreference": [],
  "xLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 2. Should handle optimistic cache on record deletion 2`] = `
{
  "__typename": "Company",
  "accountOwner": null,
  "address": {
    "__typename": "Address",
    "addressCity": "Dublin",
    "addressCountry": "Ireland",
    "addressLat": null,
    "addressLng": null,
    "addressPostcode": null,
    "addressState": null,
    "addressStreet1": "Eutaw Street",
    "addressStreet2": null,
  },
  "createdAt": "2025-02-16T08:21:51.715Z",
  "createdBy": {
    "__typename": "Actor",
    "context": {},
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "domainName": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com",
    "secondaryLinks": [],
  },
  "employees": null,
  "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": "Linkedin",
  "noteTargets": [],
  "opportunities": [
    {},
  ],
  "people": [
    {},
    {},
  ],
  "position": 1,
  "taskTargets": [],
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 3. Should handle optimistic cache rollback on record deletion failure 1`] = `
{
  "__typename": "Person",
  "attachments": [],
  "avatarFile": null,
  "avatarUrl": "https://twentyhq.github.io/placeholder-images/people/image-88.png",
  "calendarEventParticipants": [],
  "caredForPets": [],
  "city": "New Jennifer",
  "company": {},
  "companyId": "20202020-aa0b-48a9-85ba-e223975696ea",
  "createdAt": "2026-02-27T01:17:29.464Z",
  "createdBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Jony Ive",
    "source": "WEBHOOK",
    "workspaceMemberId": "20202020-77d5-4cb6-b60a-f4a835a85d61",
  },
  "deletedAt": null,
  "emails": {
    "__typename": "Emails",
    "additionalEmails": [],
    "primaryEmail": "jeffery.griffin@example.com",
  },
  "favorites": [],
  "id": "20202020-b000-4485-94de-70c2a98daef2",
  "intro": "",
  "jobTitle": "Embryologist, clinical",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com/in/person-442",
    "secondaryLinks": [],
  },
  "messageParticipants": [
    {},
  ],
  "name": {
    "__typename": "FullName",
    "firstName": "Jeffery",
    "lastName": "Griffin",
  },
  "noteTargets": [
    {},
  ],
  "performanceRating": null,
  "phones": {
    "__typename": "Phones",
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+49",
    "primaryPhoneCountryCode": "DE",
    "primaryPhoneNumber": "7114567890",
  },
  "pointOfContactForOpportunities": [],
  "position": 442,
  "previousCompanies": [],
  "taskTargets": [
    {},
  ],
  "timelineActivities": [
    {},
    {},
    {},
  ],
  "updatedAt": "2026-02-27T01:17:29.464Z",
  "updatedBy": {
    "__typename": "Actor",
    "context": null,
    "name": "Jony Ive",
    "source": "WEBHOOK",
    "workspaceMemberId": "20202020-77d5-4cb6-b60a-f4a835a85d61",
  },
  "whatsapp": {
    "__typename": "Phones",
    "additionalPhones": [],
    "primaryPhoneCallingCode": "+33",
    "primaryPhoneCountryCode": "FR",
    "primaryPhoneNumber": "",
  },
  "workPreference": [],
  "xLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 3. Should handle optimistic cache rollback on record deletion failure 2`] = `
{
  "__typename": "Company",
  "accountOwner": null,
  "address": {
    "__typename": "Address",
    "addressCity": "Dublin",
    "addressCountry": "Ireland",
    "addressLat": null,
    "addressLng": null,
    "addressPostcode": null,
    "addressState": null,
    "addressStreet1": "Eutaw Street",
    "addressStreet2": null,
  },
  "createdAt": "2025-02-16T08:21:51.715Z",
  "createdBy": {
    "__typename": "Actor",
    "context": {},
    "name": "Tim Apple",
    "source": "MANUAL",
    "workspaceMemberId": "20202020-0687-4c41-b707-ed1bfca972a7",
  },
  "deletedAt": null,
  "domainName": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "https://linkedin.com",
    "secondaryLinks": [],
  },
  "employees": null,
  "id": "20202020-3ec3-4fe3-8997-b76aa0bfa408",
  "linkedinLink": {
    "__typename": "Links",
    "primaryLinkLabel": "",
    "primaryLinkUrl": "",
    "secondaryLinks": [],
  },
  "name": "Linkedin",
  "noteTargets": [],
  "opportunities": [
    {},
  ],
  "people": [
    {},
    {},
  ],
  "position": 1,
  "taskTargets": [],
}
`;
